# arlex

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
arlex-cli/: Cargo.toml
arlex-cli/src/: common.rs  idl.rs  main.rs
arlex-cli/src/commands/: build.rs  deploy.rs  idl_cmd.rs  init.rs  mod.rs  size.rs  test.rs
arlex-derive/: Cargo.toml
arlex-derive/src/: account.rs  accounts.rs  error.rs  event.rs  lib.rs  program.rs
arlex-derive/tests/: compile_tests.rs
arlex-derive/tests/cases/: account_basic.rs  account_multiple_fields.rs  account_on_enum.rs  account_on_enum.stderr  account_unnamed_fields.rs  account_unnamed_fields.stderr  account_zero_fields.rs  accounts_account_type_no_has_one.rs  accounts_account_type_no_has_one.stderr  accounts_close.rs  accounts_close_not_found.rs  accounts_close_not_found.stderr  accounts_constraint_expr.rs  accounts_derive_basic.rs  accounts_has_one.rs  accounts_has_one_no_type.rs  accounts_has_one_no_type.stderr  accounts_has_one_not_found.rs  accounts_has_one_not_found.stderr  accounts_init_no_payer.rs  accounts_init_no_payer.stderr  accounts_init_no_pda.rs  accounts_init_no_space.rs  accounts_init_no_space.stderr  accounts_init_pda.rs  accounts_on_enum.rs  accounts_on_enum.stderr  accounts_owner_constraint.rs  accounts_payer_not_found.rs  accounts_payer_not_found.stderr  accounts_seeds_only.rs  accounts_tuple_struct.rs  accounts_tuple_struct.stderr  accounts_unknown_constraint.rs  accounts_unknown_constraint.stderr  error_code_basic.rs  error_code_on_struct.rs  error_code_on_struct.stderr  event_basic.rs  event_on_enum.rs  (+8 more)
arlex-lang/: Cargo.toml
arlex-lang/src/: lib.rs
client/: CHANGELOG.md  README.md  package-lock.json  package.json  tsup.config.ts
client/scripts/: codegen-check.mjs
e2e/: counter.test.ts  package-lock.json  package.json
(+44 files in other folders)
