[package]
name = "arlex-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the Arlex Solana framework — deploy 14x cheaper"
license = "Apache-2.0"

[[bin]]
name = "arlex"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
